AWS/nexus-repository-manager/single-instance-vpc.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Nexus Repository Manager Single Instance VPC Stack.",
  "Parameters": {
    "VpcNetBlock": {
      "Type": "String",
      "Default": "10.0.0.0/16",
      "Description": "The network address block for the VPC",
      "MinLength": "9",
      "MaxLength": "18",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x."
    },
    "SubnetAz": {
      "Type": "String",
      "Default": "10.0.1.0/24",
      "Description": "The network address block for the subnet",
      "MinLength": "9",
      "MaxLength": "18",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x."
    },
    "NexusRepositoryManagerVersion": {
      "Type": "String"
    }
  },
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "Network configuration"
          },
          "Parameters": [
            "VpcNetBlock",
            "SubnetAz"
          ]
        }
      ],
      "ParameterLabels": {
        "VpcNetBlock": {
          "default": "VPC network block"
        },
        "SubnetAz": {
          "default": "Subnet network block"
        }
      }
    }
  },
  "Resources": {
    "Vpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VpcNetBlock"
        },
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "vpc",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          },
          {
            "Key": "Platform",
            "Value": "nexus-repository-manager"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusRepositoryManagerVersion"
            }
          }
        ]
      }
    },
    "InstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Nexus Repository Manager EC2 Security Group",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8081",
            "ToPort": "8081",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "sg",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          },
          {
            "Key": "Platform",
            "Value": "nexus-repository-manager"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusRepositoryManagerVersion"
            }
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      }
    },
    "InstanceSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Ref": "SubnetAz"
        },
        "MapPublicIpOnLaunch":true,
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "sn",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          },
          {
            "Key": "Platform",
            "Value": "nexus-repository-manager"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusRepositoryManagerVersion"
            }
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      }
    },
    "SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable"
        },
        "SubnetId": {
          "Ref": "InstanceSubnet"
        }
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "ig",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          },
          {
            "Key": "Platform",
            "Value": "nexus-repository-manager"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusRepositoryManagerVersion"
            }
          }
        ]
      }
    },
    "VPCGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "DefaultRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "RouteTable"
        },
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      },
      "DependsOn": "VPCGatewayAttachment"
    },
    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "rt",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          },
          {
            "Key": "Platform",
            "Value": "nexus-repository-manager"
          },
          {
            "Key": "Version",
            "Value": {
              "Ref": "NexusRepositoryManagerVersion"
            }
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      }
    }
  },
  "Outputs": {
    "Vpc": {
      "Value": {
        "Ref": "Vpc"
      }
    },
    "InstanceSubnet": {
      "Value": {
        "Ref": "InstanceSubnet"
      }
    },
    "InstanceSecurityGroup": {
      "Value": {
        "Ref": "InstanceSecurityGroup"
      }
    }
  }
}
